# paper-implementations

./: .gitignore  pyproject.toml
src/ha_schmidhuber_world_models_2018/: __init__.py  car_racing_dataset.py  collect_data.py  controller.py  evolve_controller.py  train_vae.py  train_world_model.py  utils.py  vae.py  visualize_controller_trial.py  world_model.py
src/hafner_dreamer/: train_rssm.py
src/hafner_dreamer/models/: controller.py  encoder_decoder.py  replay_buffer.py  rssm.py
src/silver_alpha_zero/: cube_viz.py  experiment_trajectory_length.py  inference_server.py  mcst.py  policy.py  replay_buffer.py  rubik_cube_solver.py  self_play_worker.py  train_policy.py
