[project]
name = "paper-implementations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rendok", email = "rendok17@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
paper-implementations = "paper_implementations:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
