[project]
name = "paper-implementations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rendok", email = "rendok17@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cma>=4.4.4",
    "einops>=0.8.2",
    "flax>=0.12.6",
    "grain>=0.2.16",
    "gymnasium[box2d]>=1.2.3",
    "jax[cuda13]>=0.9.2",
    "jaxtyping>=0.3.9",
    "magiccube>=1.2.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "numpy>=2.4.4",
    "nvidia-ml-py>=13.595.45",
    "optax>=0.2.8",
    "orbax-checkpoint>=0.11.35",
    "psutil>=7.2.2",
    "swig>=4.4.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[project.scripts]
paper-implementations = "ha_schmidhuber_world_models_2018:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ha_schmidhuber_world_models_2018"]
